Bindings/NIFToolset.Native/NIF.Native.Animation.h

typedef struct NIF_KFMSequenceGroupEntryDesc
{
	unsigned int sequenceId;
	int priority;
	float weight;
	float easeInTime;
	float easeOutTime;
	unsigned int synchronizeSequenceId;
	int additive;
} NIF_KFMSequenceGroupEntryDesc;
typedef struct NIF_KFMBlendPairDesc
{
	const char* startKey;
	const char* targetKey;
} NIF_KFMBlendPairDesc;
typedef struct NIF_KFMChainEntryDesc
{
	unsigned int sequenceId;
	float duration;
} NIF_KFMChainEntryDesc;
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_KFM_Destroy(NIF_KFMToolHandle kfmTool);
NIFTOOLSET_NATIVE_ENTRY NIF_KFMToolHandle NIF_Animation_KFM_Create(void);
NIFTOOLSET_NATIVE_ENTRY NIF_KFMToolHandle NIF_Animation_KFM_Load(const char* filename);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_LoadFile(NIF_KFMToolHandle kfmTool, const char* filename);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_Animation_KFM_GetModelPath(NIF_KFMToolHandle kfmTool);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_KFM_SetModelPath(NIF_KFMToolHandle kfmTool, const char* modelPath);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_Animation_KFM_GetModelRoot(NIF_KFMToolHandle kfmTool);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_KFM_SetModelRoot(NIF_KFMToolHandle kfmTool, const char* modelRoot);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_Animation_KFM_GetBaseKFMPath(NIF_KFMToolHandle kfmTool);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_KFM_SetBaseKFMPath(NIF_KFMToolHandle kfmTool, const char* baseKfmPath);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_KFM_GetSequenceCount(NIF_KFMToolHandle kfmTool);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_GetSequenceIdAt(NIF_KFMToolHandle kfmTool, unsigned int index, unsigned int* outSequenceId);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_KFM_FindSequenceId(NIF_KFMToolHandle kfmTool, const char* sequenceName);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_AddSequence(NIF_KFMToolHandle kfmTool, unsigned int sequenceId, const char* filename, const char* sequenceName);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_UpdateSequence(NIF_KFMToolHandle kfmTool, unsigned int sequenceId, const char* filename, const char* sequenceName);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_RemoveSequence(NIF_KFMToolHandle kfmTool, unsigned int sequenceId);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_AddTransition(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId, int transitionType, float duration);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_UpdateTransition(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId, int transitionType, float duration);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_RemoveTransition(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_IsTransitionAllowed(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId, int* outAllowed);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_AddSequenceGroup(NIF_KFMToolHandle kfmTool, unsigned int groupId, const char* groupName);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_RemoveSequenceGroup(NIF_KFMToolHandle kfmTool, unsigned int groupId);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_KFM_GetGroupCount(NIF_KFMToolHandle kfmTool);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_GetGroupIdAt(NIF_KFMToolHandle kfmTool, unsigned int index, unsigned int* outGroupId);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_AddSequenceToGroup(NIF_KFMToolHandle kfmTool, unsigned int groupId, unsigned int sequenceId, int priority, float weight, float easeInTime, float easeOutTime, unsigned int synchronizeSequenceId);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_RemoveSequenceFromGroup(NIF_KFMToolHandle kfmTool, unsigned int groupId, unsigned int sequenceId);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_RemoveAllSequencesFromGroup(NIF_KFMToolHandle kfmTool, unsigned int groupId);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_KFM_GetSequenceGroupEntryCount(NIF_KFMToolHandle kfmTool, unsigned int groupId);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_GetSequenceGroupEntryAt(NIF_KFMToolHandle kfmTool, unsigned int groupId, unsigned int index, NIF_KFMSequenceGroupEntryDesc* outEntry);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_AddBlendPair(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId, const char* startKey, const char* targetKey);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_RemoveBlendPair(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId, const char* startKey, const char* targetKey);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_RemoveAllBlendPairs(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_KFM_GetBlendPairCount(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_GetBlendPairAt(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId, unsigned int index, NIF_KFMBlendPairDesc* outBlendPair);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_AddSequenceToChain(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId, unsigned int sequenceId, float duration);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_RemoveSequenceFromChain(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId, unsigned int sequenceId);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_RemoveAllSequencesFromChain(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId);
NIFTOOLSET_NATIVE_ENTRY unsigned int NIF_Animation_KFM_GetChainEntryCount(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_GetChainEntryAt(NIF_KFMToolHandle kfmTool, unsigned int sourceSequenceId, unsigned int destinationSequenceId, unsigned int index, NIF_KFMChainEntryDesc* outChainEntry);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_GetDefaultSyncTransitionType(NIF_KFMToolHandle kfmTool);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_SetDefaultSyncTransitionType(NIF_KFMToolHandle kfmTool, int transitionType);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_GetDefaultNonSyncTransitionType(NIF_KFMToolHandle kfmTool);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_KFM_SetDefaultNonSyncTransitionType(NIF_KFMToolHandle kfmTool, int transitionType);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_KFM_GetDefaultSyncTransitionDuration(NIF_KFMToolHandle kfmTool);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_KFM_SetDefaultSyncTransitionDuration(NIF_KFMToolHandle kfmTool, float duration);
NIFTOOLSET_NATIVE_ENTRY float NIF_Animation_KFM_GetDefaultNonSyncTransitionDuration(NIF_KFMToolHandle kfmTool);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_KFM_SetDefaultNonSyncTransitionDuration(NIF_KFMToolHandle kfmTool, float duration);
NIFTOOLSET_NATIVE_ENTRY const char* NIF_Animation_KFM_LookupReturnCode(int returnCode);
NIFTOOLSET_NATIVE_ENTRY void NIF_Animation_ActorManager_Destroy(NIF_ActorManagerHandle actorManager);
NIFTOOLSET_NATIVE_ENTRY NIF_ActorManagerHandle NIF_Animation_ActorManager_CreateFromKFM(NIF_KFMToolHandle kfmTool, const char* kfmFilePath, int cumulativeAnimations, int loadFilesFromDisk);
NIFTOOLSET_NATIVE_ENTRY NIF_ActorManagerHandle NIF_Animation_ActorManager_CreateFromFile(const char* kfmFilename, int cumulativeAnimations, int loadFilesFromDisk);
NIFTOOLSET_NATIVE_ENTRY int NIF_Animation_ActorManager_ReloadNIFFile(NIF_ActorManagerHandle actorManager, int loadNifFile);