Bindings/NIFToolset.Managed/NativeMethods.cs


    #region NIF.Native.Animation.h
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_Animation_KFM_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeKfmToolHandle NIF_Animation_KFM_Create();
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeKfmToolHandle NIF_Animation_KFM_Load([MarshalAs(UnmanagedType.LPUTF8Str)] string? filename);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_LoadFile(SafeKfmToolHandle kfmTool, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Animation_KFM_GetModelPath(SafeKfmToolHandle kfmTool);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_KFM_SetModelPath(SafeKfmToolHandle kfmTool, [MarshalAs(UnmanagedType.LPUTF8Str)] string? modelPath);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Animation_KFM_GetModelRoot(SafeKfmToolHandle kfmTool);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_KFM_SetModelRoot(SafeKfmToolHandle kfmTool, [MarshalAs(UnmanagedType.LPUTF8Str)] string? modelRoot);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Animation_KFM_GetBaseKFMPath(SafeKfmToolHandle kfmTool);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_KFM_SetBaseKFMPath(SafeKfmToolHandle kfmTool, [MarshalAs(UnmanagedType.LPUTF8Str)] string? baseKfmPath);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_KFM_GetSequenceCount(SafeKfmToolHandle kfmTool);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_GetSequenceIdAt(SafeKfmToolHandle kfmTool, uint index, uint* outSequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_KFM_FindSequenceId(SafeKfmToolHandle kfmTool, [MarshalAs(UnmanagedType.LPUTF8Str)] string? sequenceName);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_AddSequence(SafeKfmToolHandle kfmTool, uint sequenceId, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, [MarshalAs(UnmanagedType.LPUTF8Str)] string? sequenceName);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_UpdateSequence(SafeKfmToolHandle kfmTool, uint sequenceId, [MarshalAs(UnmanagedType.LPUTF8Str)] string? filename, [MarshalAs(UnmanagedType.LPUTF8Str)] string? sequenceName);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_RemoveSequence(SafeKfmToolHandle kfmTool, uint sequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_AddTransition(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId, int transitionType, float duration);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_UpdateTransition(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId, int transitionType, float duration);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_RemoveTransition(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_IsTransitionAllowed(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId, int* outAllowed);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_AddSequenceGroup(SafeKfmToolHandle kfmTool, uint groupId, [MarshalAs(UnmanagedType.LPUTF8Str)] string? groupName);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_RemoveSequenceGroup(SafeKfmToolHandle kfmTool, uint groupId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_KFM_GetGroupCount(SafeKfmToolHandle kfmTool);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_GetGroupIdAt(SafeKfmToolHandle kfmTool, uint index, uint* outGroupId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_AddSequenceToGroup(SafeKfmToolHandle kfmTool, uint groupId, uint sequenceId, int priority, float weight, float easeInTime, float easeOutTime, uint synchronizeSequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_RemoveSequenceFromGroup(SafeKfmToolHandle kfmTool, uint groupId, uint sequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_RemoveAllSequencesFromGroup(SafeKfmToolHandle kfmTool, uint groupId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_KFM_GetSequenceGroupEntryCount(SafeKfmToolHandle kfmTool, uint groupId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_GetSequenceGroupEntryAt(SafeKfmToolHandle kfmTool, uint groupId, uint index, NifKfmSequenceGroupEntryDesc* outEntry);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_AddBlendPair(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId, [MarshalAs(UnmanagedType.LPUTF8Str)] string? startKey, [MarshalAs(UnmanagedType.LPUTF8Str)] string? targetKey);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_RemoveBlendPair(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId, [MarshalAs(UnmanagedType.LPUTF8Str)] string? startKey, [MarshalAs(UnmanagedType.LPUTF8Str)] string? targetKey);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_RemoveAllBlendPairs(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_KFM_GetBlendPairCount(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_GetBlendPairAt(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId, uint index, NifKfmBlendPairDesc* outBlendPair);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_AddSequenceToChain(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId, uint sequenceId, float duration);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_RemoveSequenceFromChain(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId, uint sequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_RemoveAllSequencesFromChain(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern uint NIF_Animation_KFM_GetChainEntryCount(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_GetChainEntryAt(SafeKfmToolHandle kfmTool, uint sourceSequenceId, uint destinationSequenceId, uint index, NifKfmChainEntryDesc* outChainEntry);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_GetDefaultSyncTransitionType(SafeKfmToolHandle kfmTool);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_SetDefaultSyncTransitionType(SafeKfmToolHandle kfmTool, int transitionType);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_GetDefaultNonSyncTransitionType(SafeKfmToolHandle kfmTool);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_KFM_SetDefaultNonSyncTransitionType(SafeKfmToolHandle kfmTool, int transitionType);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_KFM_GetDefaultSyncTransitionDuration(SafeKfmToolHandle kfmTool);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_KFM_SetDefaultSyncTransitionDuration(SafeKfmToolHandle kfmTool, float duration);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern float NIF_Animation_KFM_GetDefaultNonSyncTransitionDuration(SafeKfmToolHandle kfmTool);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern void NIF_Animation_KFM_SetDefaultNonSyncTransitionDuration(SafeKfmToolHandle kfmTool, float duration);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern nint NIF_Animation_KFM_LookupReturnCode(int returnCode);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    internal static extern void NIF_Animation_ActorManager_Destroy(nint handle);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeActorManagerHandle NIF_Animation_ActorManager_CreateFromKFM(SafeKfmToolHandle kfmTool, [MarshalAs(UnmanagedType.LPUTF8Str)] string? kfmFilePath, int cumulativeAnimations, int loadFilesFromDisk);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern SafeActorManagerHandle NIF_Animation_ActorManager_CreateFromFile([MarshalAs(UnmanagedType.LPUTF8Str)] string? kfmFilename, int cumulativeAnimations, int loadFilesFromDisk);
    [DllImport(LibraryName, CallingConvention = CallConvention, ExactSpelling = true)]
    public static extern int NIF_Animation_ActorManager_ReloadNIFFile(SafeActorManagerHandle actorManager, int loadNifFile);
